--- a/SpawnProofer/src/main/resources/assets/spawnproofer/lang/en_us.json
+++ b/SpawnProofer/src/main/resources/assets/spawnproofer/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "category.spawnproofer.mod": "SpawnProofer",
   "key.spawnproofer.toggle": "Toggle SpawnProofer",
+  "text.autoconfig.spawnproofer.title": "SpawnProofer",
   "text.autoconfig.spawnproofer.option.reachDistance": "Reach Distance",
   "text.autoconfig.spawnproofer.option.reachDistance.@Tooltip": "Reach Distance",
   "text.autoconfig.spawnproofer.option.maxInteractionPerTick": "Max Interaction Per Tick",
