--- a/SpawnProofer/src/main/resources/assets/spawnproofer/lang/en_us.json
+++ b/SpawnProofer/src/main/resources/assets/spawnproofer/lang/en_us.json
@@ -9,5 +9,7 @@
   "text.autoconfig.spawnproofer.option.maxInteractionPerTick": "Max Interaction Per Tick",
   "text.autoconfig.spawnproofer.option.maxInteractionPerTick.@Tooltip": "Max Interaction Per Tick",
   "text.autoconfig.spawnproofer.option.minLighting": "Minimum Required Lighting",
-  "text.autoconfig.spawnproofer.option.minLighting.@Tooltip": "Minimum required lighting for torch to be placed"
+  "text.autoconfig.spawnproofer.option.minLighting.@Tooltip": "Minimum required lighting for torch to be placed",
+  "text.autoconfig.spawnproofer.option.replace": "Replace Instat Break Blocks",
+  "text.autoconfig.spawnproofer.option.replace.@Tooltip": "Will replace insta-break blocks"
 }
